Save and View Profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="mutualpay.catchblocker.com.mutualpay" >
+    package="com.catchblocker.mutualpay" >
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,6 @@
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -27,12 +26,8 @@
                 android:value="mutualpay.catchblocker.com.mutualpay.StartUpActivity" />
         </activity>
         <activity
-            android:name=".Profile"
-            android:label="@string/title_activity_profile"
-            android:parentActivityName=".StartUpActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="mutualpay.catchblocker.com.mutualpay.StartUpActivity" />
+            android:name=".UserProfile"
+            android:label="@string/title_activity_user_profile" >
         </activity>
     </application>
 
