--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "mutualpay.catchblocker.com.mutualpay"
+        applicationId "com.catchblocker.mutualpay"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
@@ -26,4 +26,9 @@ dependencies {
     compile files('libs/gson-2.3.1.jar')
     compile files('E:/AndriodWorkSpace/MutualPay/libs/db4o-8.0.276.16149-all-java5.jar')
     compile files('libs/db4o-8.0.276.16149-all-java5.jar')
+    compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.0'
+}
+
+repositories {
+    mavenCentral()
 }
