--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.catchblocker.mutualpay" >
+
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -42,6 +44,10 @@
         <activity
             android:name=".AddContactsActivity"
             android:label="@string/title_activity_add_contacts" >
+        </activity>
+        <activity
+            android:name=".AddBill"
+            android:label="@string/title_activity_add_bill" >
         </activity>
     </application>
 
