--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
     compile files('libs/gson-2.3.1.jar')
-    compile files('E:/AndriodWorkSpace/MutualPay/libs/db4o-8.0.276.16149-all-java5.jar')
-    compile files('libs/db4o-8.0.276.16149-all-java5.jar')
+    //compile files('E:/AndriodWorkSpace/MutualPay/libs/db4o-8.0.276.16149-all-java5.jar')
+    //compile files('libs/db4o-8.0.276.16149-all-java5.jar')
     compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.0'
+    compile files('libs/db4o-core-java5-8.1.3-SNAPSHOT.jar')
 }
 
 repositories {
